# logging

./: .gitignore  MANIFEST.in  README.md  develop-requirements.txt  pydocmd.yml  requirements.txt  setup.cfg  test-requirements.txt
sportech/: __init__.py
sportech/helper/logging/: __init__.py  adapter.py  defaults.yml  formatter.py  logger.py
tests/: test_adapter.py  test_formatter.py  test_logger.py
