[metadata]
name = sportech-helper-logging
summary = Helper logging facilities
license = closed
description-file = README.md
home-page = https://gitdev.sporte.tech/gitlab/sportech/helper/logging.git
requires-python = >=2.7, <=3.9
classifier =
    Development Status :: 5 - Alpha
    Environment :: Console
    License :: Other/Proprietary License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[pbr]
warnerrors = True

[files]
packages =
    sportech.helper.logging
    sportech.helper
    sportech
    
namespace_packages =
    sportech.helper
    sportech
    
[wheel]
universal = 0

[aliases]
ci_test = pytest

[tool:pytest]
addopts =
    -x --flake8 --verbose -p no:_pytest.cacheprovider --continue-on-collection-errors
    --html=reports/test-report.html --self-contained-html --cov . --cov-report term
    --cov-report html:reports/coverage --cov-branch
norecursedirs =
    sportech/helper/logging/assets
    
testpaths =
    sportech/helper/logging
    tests
flake8-ignore =
    tests/* ALL


[flake8]
show-source=True
max-line-length=120
statistics = True
output-file = reports/flake8.txt
tee = True